# pymcintosh

./: .pre-commit-config.yaml  LICENSE  README.md  SUPPORTED.md  emulator.py  example-async.py  example-sync.py  example.py  protocols.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-dynamic-client.py  test-endpoint.py
.github/workflows/: ci.yml
examples/: example-async.py  example-sync.py
pyavcontrol/: __init__.py  const.py  core.py
pyavcontrol/client/: __init__.py  async_client.py  asynchronous.py  base.py  sync_client.py  synchronous.py
pyavcontrol/connection/: __init__.py  async_connection.py  sync_connection.py
pyavcontrol/controller/: __init__.py  asynchronous.py
pyavcontrol/data/: defaults.yaml
pyavcontrol/models/: __init__.py  hdfury_vrroom.yaml  mcintosh_legacy.yaml  mcintosh_mx160.yaml  mcintosh_mx170.yaml  mcintosh_original.yaml  mx160.yaml  trinnov_altitude.yaml
pyavcontrol/old-series/: mcintosh.yaml
pymcintosh/: __init__.py  asynchronous.py  config.py  const.py  controllers.py  core.py  protocol.py  sync.py
pymcintosh/connection/: __init__.py  asynchronous.py
pymcintosh/controller/: __init__.py  asynchronous.py  base.py  synchronous.py
pymcintosh/models/: __init__.py  lygndorf.yaml  mcintosh.yaml  mcintosh_legacy.yaml  mx160.yaml
pymcintosh/old-series/: mcintosh_legacy.yaml
pymcintosh/protocols/: README.md  __init__.py  mcintosh.yaml  mcintosh_legacy.yaml  mcintosh_mx12x.yaml  mcintosh_v1.yaml  mcintosh_v3 (Ryan Snodgrass's conflicted copy 2023-11-20).yaml  mx160.yaml  (+3 more)
tools/: generate-docs  validate-model-definition
(+20 files in other folders)
