[project]
name = "pyavcontrol"
version = "0.0.1"
description = "Python Control of RS232/IP Audio/Visual Equipment"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = []

dependencies = [
    "pyserial >= 3.5",
    "pyserial-asyncio >= 0.6",
    "ratelimit >= 2.2.1"
]


[project.optional-dependencies]
test = [    # pip install .[test]
    "coloredlogs",
    "pre-commit"
]
doc = [
    "sphinx",
]   

[tool.isort]
profile = "black"
force_to_top = [ "logging" ]
balanced_wrapping = true

[tool.black]
line-length = 90

[tool.pycln]
all = true

[tool.refurb]
quiet = true
ignore = []

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.CODE_STYLE]
max-line-length-suggestions = 90
